# ACBC_open_source

./: AGENTS.md  EXPLANATION.md  README.md  acbc_results.csv  main.py  pyproject.toml
acbc/: AGENTS.md  __init__.py  analysis.py  design.py  engine.py  io.py  models.py  screening.py
cli/: AGENTS.md  aggregate.py  survey.py
configs/: AGENTS.md  demo_laptop.yaml
web/: app.py
web/static/: style.css
web/templates/: base.html  byo.html  choice.html  complete.html  rule_check.html  screening.html  welcome.html
